--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
 
 :root{
     --cor1: hsl(75, 94%, 57%);
@@ -8,4 +8,115 @@
     --cor3: hsl(0, 0%, 20%);
     --cor4: hsl(0, 0%, 12%);
     --cor5: hsl(0, 0%, 8%);
+    --font: font-family: 'Inter', sans-serif;
+}
+
+body{
+    background-color: var(--cor5);
+    font-family: var(--font);
+    overflow-x: hidden;
+}
+
+main{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+section{
+    width: 550px;
+    height: 675px;
+    background-color: var(--cor4);
+    text-align: -webkit-center;
+    border-radius: 20px;
+}
+
+div#hername{
+    width: 550px;
+    height: 458px;
+}
+
+div#imgface{
+    width: 120px;
+    height: 120px;
+    border-radius: 90px;
+    margin: 20px;
+    overflow: hidden;
+}
+
+div#imgface > img{
+    width: 120px;
+    height: 120px;
+}
+
+h1{
+    font-size: 1.8em;
+    color: var(--cor2);
+}
+
+h2{
+    font-size: 1.2em;
+    color: var(--cor1);
+}
+
+p{
+    font-size: 0.9em;
+    color: var(--cor2);
+}
+
+div.socialmedia{
+    width: 400px;
+    height: 40px;
+    background-color: var(--cor3);
+    border-radius: 20px;
+    padding: 10px;
+    text-align: center;
+    margin-top: 7px;
+    cursor: pointer;
+}
+
+div.socialmedia > p > a{
+    text-decoration: none;
+    color: var(--cor2);
+}
+
+div.socialmedia:hover{
+    background-color: var(--cor1);
+    transition: 0.3s;
+}
+
+div.socialmedia:hover > p > a{
+    color: var(--cor5);
+}
+
+footer{
+    text-align: center;
+}
+
+footer > p > a{
+    text-decoration: none;
+    color: var(--cor1);
+}
+
+@media (max-width: 600px){
+
+    body{
+        overflow-x: hidden;
+    }
+    section{
+        width: 400px;
+        text-align: -webkit-center;
+    }
+    div#hername{
+        width: 400px;
+    }
+    div.socialmedia {
+        width: 320px;
+        height: 25px;
+        margin-top: 10px;
+        text-align: center;
+        padding-bottom: 20px;
+    }
 }
