--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ p{
 }
 
 div.socialmedia{
+    display: block !important;
     width: 400px;
     height: 40px;
     background-color: var(--cor3);
